--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <repositories>  
+        <repository>  
+            <id>alimaven</id>  
+            <name>aliyun maven</name>  
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>  
+            <releases>  
+                <enabled>true</enabled>  
+            </releases>  
+            <snapshots>  
+                <enabled>false</enabled>  
+            </snapshots>  
+        </repository>  
+  </repositories>
   <build>
     <finalName>trucks</finalName>
   </build>
